--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,4 +46,9 @@ dependencies {
     implementation 'com.facebook.android:facebook-applinks:4.40.0'
     implementation 'com.daimajia.easing:library:2.0@aar'
     implementation 'com.daimajia.androidanimations:library:2.3@aar'
+    implementation 'com.google.firebase:firebase-core:16.0.7'
+    implementation 'com.google.firebase:firebase-dynamic-links:16.1.7'
+    implementation "com.andkulikov:transitionseverywhere:1.8.1"
 }
+
+apply plugin: 'com.google.gms.google-services'
