--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,11 +6,15 @@
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.MANAGE_DOCUMENTS" tools:ignore="ProtectedPermissions"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+
     <application
         android:allowBackup="true"
         android:label="@string/app_name"
         android:theme="@style/AppTheme"
-        android:icon="@drawable/ic_launcher_foreground"
+        android:icon="@drawable/logo"
         android:usesCleartextTraffic="true"
         tools:ignore="GoogleAppIndexingWarning">
         <activity
@@ -39,6 +43,15 @@
                 <category android:name="android.intent.category.BROWSABLE"/>
             </intent-filter>
         </activity>
+
+        <activity android:name=".schedule.activities.MainActivity"
+                  android:configChanges="orientation|keyboardHidden|screenSize"
+                  android:theme="@style/AppTheme"/>
+
+
+        <activity android:name=".SimpleWebViewActivity"
+                  android:configChanges="orientation|keyboardHidden|screenSize"
+                  android:theme="@style/AppTheme"/>
 
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
