--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ buildscript {
         classpath 'io.fabric.tools:gradle:1.25.4'
         classpath 'com.github.ben-manes:gradle-versions-plugin:0.20.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'com.google.gms:google-services:4.0.1'
     }
 }
 
