--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,17 +6,35 @@ apply plugin: 'kotlin-kapt'
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "kqb.das.awkie"
+        applicationId "fivetop.twozerozero.superlink"
         minSdkVersion 16
         targetSdkVersion 28
-        versionCode 2
-        versionName "1.1"
+        versionCode 1
+        versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
+
+    signingConfigs {
+
+        production {
+            storeFile file("../keystore/android_release.keystore")
+            storePassword "top5_0004_release_pass"
+            keyAlias "app_004_release"
+            keyPassword "top5_0004_release_pass"
+        }
+    }
+
     buildTypes {
         release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            minifyEnabled true
+            signingConfig signingConfigs.production
+            proguardFiles 'proguard-rules.pro'
+        }
+
+        debug {
+//            minifyEnabled true
+//            proguardFiles 'proguard-rules.pro'
+//            signingConfig signingConfigs.debug
         }
     }
 }
@@ -48,7 +66,6 @@ dependencies {
     implementation 'com.daimajia.androidanimations:library:2.3@aar'
     implementation 'com.google.firebase:firebase-core:16.0.7'
     implementation 'com.google.firebase:firebase-dynamic-links:16.1.7'
-    implementation "com.andkulikov:transitionseverywhere:1.8.1"
 }
 
 apply plugin: 'com.google.gms.google-services'
