--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    package="kqb.das.awkie">
+          xmlns:tools="http://schemas.android.com/tools"
+          package="kqb.das.awkie">
 
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
@@ -11,16 +11,16 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 
     <application
-        android:allowBackup="true"
-        android:label="@string/app_name"
-        android:theme="@style/AppTheme"
-        android:icon="@drawable/logo"
-        android:usesCleartextTraffic="true"
-        tools:ignore="GoogleAppIndexingWarning">
+            android:allowBackup="true"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme"
+            android:icon="@drawable/logo"
+            android:usesCleartextTraffic="true"
+            tools:ignore="GoogleAppIndexingWarning">
         <activity
-            android:name=".schedule.activities.CatchDeepLinkActivity"
-            android:launchMode="singleInstance"
-            android:theme="@style/SplashTheme">
+                android:name=".schedule.activities.CatchDeepLinkActivity"
+                android:launchMode="singleInstance"
+                android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
@@ -29,13 +29,13 @@
 
         </activity>
         <activity
-            android:name=".schedule.activities.SuccessDeepLinkActivity"
-            android:configChanges="orientation|keyboardHidden|screenSize"
-            android:theme="@style/AppTheme">
+                android:name=".schedule.activities.SuccessDeepLinkActivity"
+                android:configChanges="orientation|keyboardHidden|screenSize"
+                android:theme="@style/AppTheme">
             <intent-filter>
                 <data
-                    android:host="open"
-                    android:scheme="deeplinkad"/>
+                        android:host="open"
+                        android:scheme="deeplinkad"/>
 
                 <action android:name="android.intent.action.VIEW"/>
 
@@ -48,22 +48,25 @@
                   android:configChanges="orientation|keyboardHidden|screenSize"
                   android:theme="@style/AppTheme"/>
 
-
         <activity android:name=".SimpleWebViewActivity"
                   android:configChanges="orientation|keyboardHidden|screenSize"
                   android:theme="@style/AppTheme"/>
 
+        <activity android:name=".schedule.KosmoActivity"
+                  android:configChanges="orientation|keyboardHidden|screenSize"
+                  android:theme="@style/AppTheme"/>
+
         <meta-data
-            android:name="com.facebook.sdk.ApplicationId"
-            android:value="@string/facebook_app_id"/>
+                android:name="com.facebook.sdk.ApplicationId"
+                android:value="@string/facebook_app_id"/>
 
         <activity
-            android:name="com.facebook.FacebookActivity"
-            android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
-            android:label="@string/app_name"/>
+                android:name="com.facebook.FacebookActivity"
+                android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
+                android:label="@string/app_name"/>
         <activity
-            android:name="com.facebook.CustomTabActivity"
-            android:exported="true">
+                android:name="com.facebook.CustomTabActivity"
+                android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW"/>
 
